Bug 1296875 - Minor TraceLogger cleanups, comments, refactoring; r=h4writer