js/src/vm/TraceLogging.cpp
@@ -358,14 +358,9 @@ TraceLoggerThread::getOrCreateEventPayload(const char* text)
 
     AutoTraceLog internal(this, TraceLogger_Internal);
 
-    size_t len = strlen(text);
-    char* str = js_pod_malloc<char>(len + 1);
+    char* str = js_strdup(text);
     if (!str)
         return nullptr;
-
-    DebugOnly<size_t> ret = snprintf(str, len + 1, "%s", text);
-    MOZ_ASSERT(ret == len);
-    MOZ_ASSERT(strlen(str) == len);
 
     uint32_t textId = nextTextId;
 
@@ -546,7 +541,7 @@ TraceLoggerThread::log(uint32_t id)
     MOZ_ASSERT(traceLoggerState);
 
     // We request for 3 items to add, since if we don't have enough room
-    // we record the time it took to make more place. To log this information
+    // we record the time it took to make more space. To log this information
     // we need 2 extra free entries.
     if (!events.hasSpaceForAdd(3)) {
         uint64_t start = rdtsc() - traceLoggerState->startupTime;
@@ -674,7 +669,7 @@ TraceLoggerThreadState::init()
         );
         for (uint32_t i = 1; i < TraceLogger_Last; i++) {
             TraceLoggerTextId id = TraceLoggerTextId(i);
-            if (!TLTextIdIsToggable(id))
+            if (!TLTextIdIsTogglable(id))
                 continue;
             printf("  %s\n", TLTextIdString(id));
         }
@@ -685,7 +680,7 @@ TraceLoggerThreadState::init()
 
     for (uint32_t i = 1; i < TraceLogger_Last; i++) {
         TraceLoggerTextId id = TraceLoggerTextId(i);
-        if (TLTextIdIsToggable(id))
+        if (TLTextIdIsTogglable(id))
             enabledTextIds[i] = ContainsFlag(env, TLTextIdString(id));
         else
             enabledTextIds[i] = true;
@@ -771,11 +766,11 @@ TraceLoggerThreadState::init()
         }
 
         if (strstr(options, "EnableMainThread"))
-           mainThreadEnabled = true;
+            mainThreadEnabled = true;
         if (strstr(options, "EnableOffThread"))
-           offThreadEnabled = true;
+            offThreadEnabled = true;
         if (strstr(options, "EnableGraph"))
-           graphSpewingEnabled = true;
+            graphSpewingEnabled = true;
     }
 
     startupTime = rdtsc();
@@ -790,7 +785,7 @@ TraceLoggerThreadState::init()
 void
 TraceLoggerThreadState::enableTextId(JSContext* cx, uint32_t textId)
 {
-    MOZ_ASSERT(TLTextIdIsToggable(textId));
+    MOZ_ASSERT(TLTextIdIsTogglable(textId));
 
     if (enabledTextIds[textId])
         return;
@@ -813,7 +808,7 @@ TraceLoggerThreadState::enableTextId(JSContext* cx, uint32_t textId)
 void
 TraceLoggerThreadState::disableTextId(JSContext* cx, uint32_t textId)
 {
-    MOZ_ASSERT(TLTextIdIsToggable(textId));
+    MOZ_ASSERT(TLTextIdIsTogglable(textId));
 
     if (!enabledTextIds[textId])
         return;
@@ -1016,10 +1011,10 @@ TraceLoggerEvent::~TraceLoggerEvent()
 TraceLoggerEvent&
 TraceLoggerEvent::operator=(const TraceLoggerEvent& other)
 {
-    if (hasPayload())
-        payload()->release();
     if (other.hasPayload())
         other.payload()->use();
+    if (hasPayload())
+        payload()->release();
 
     payload_ = other.payload_;
 
